Added front and back faces and container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,4 +7,20 @@
 body {
     height: 100vh;
     background: #060AB2;
+    display: flex;
+}
+
+.memory-game {
+    width: 640px;
+    height: 640px;
+    display: flex;
+    border: 2px solid #ffffff;
+}
+
+.memory-card {
+    border: 2px solid #ff0000;
+}
+
+.front-face, .back-face {
+    border: 2px solid #00ff00;
 }
