--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,21 +6,32 @@
 
 body {
     height: 100vh;
-    background: #060AB2;
     display: flex;
+    background: #060AB2;
 }
 
 .memory-game {
     width: 640px;
     height: 640px;
+    margin: auto;
     display: flex;
-    border: 2px solid #ffffff;
+    flex-wrap: wrap;
 }
 
 .memory-card {
-    border: 2px solid #ff0000;
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    margin: 5px;
+    position: relative;
+
 }
 
-.front-face, .back-face {
-    border: 2px solid #00ff00;
+.front-face,
+.back-face {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: #1c7ccc;
 }
