--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,12 @@ body {
     height: calc(33.333% - 10px);
     margin: 5px;
     position: relative;
+    transform: scale(1);
+}
 
+.memory-card:active {
+    transform: scale(.95);
+    transition: transform .1s;
 }
 
 .front-face,
