--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     height: 100vh;
     display: flex;
-    background: #060AB2;
+    background: url('/assets/images/pexels-pixabay-235985.jpg');
 }
 
 .memory-game {
@@ -45,6 +45,10 @@ body {
     padding: 20px;
     position: absolute;
     border-radius: 5px;
-    background: #1c7ccc;
+    background: #4b2e00;
     backface-visibility: hidden;
+}
+
+.front-face{
+    transform: rotateY(180deg);
 }
