Changed background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,16 @@
 body {
     height: 100vh;
     display: flex;
-    background: url('/assets/images/pexels-pixabay-235985.jpg');
+    background: #9b683f;
     font-family: 'Playfair Display';
 }
 
 h1 {
     font-weight: 400;
+}
+
+span {
+    color: #ffffff;
 }
 
 .timer {
