--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     height: 100vh;
     display: flex;
-    background: linear-gradient(to bottom, #ff9933 0%, #993333 100%);
+    background: #d38542;
     font-family: 'Playfair Display';
 }
 
